--- a/content/resources/11-164f15.md
+++ b/content/resources/11-164f15.md
@@ -11,7 +11,7 @@ image_metadata:
   caption: Demonstrators gather at an anti-torture vigil. The United States has been
     criticized for using torture, such as waterboarding, as an interrogation tactic.
     Session 6 will take a closer look at torture and its role in wars. (Image courtesy
-    of [Justin Norman](https://www.flickr.com/photos/shriekingtree/5225175851/in/photostream/)
+    of {{% resource_link "7494976c-8cfa-435b-9e6b-212d13913f9b" "Justin Norman" %}}
     on flickr. License CC BY-NC-SA.)
   credit: Image courtesy of Justin Norman on flickr. License CC BY-NC-SA.
   image-alt: "A protester stands with a black hood over his face while holding a sign\
